
[package]
edition = "2024"
name = "texture_packer"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# anyhow = "1.0"
anyhow = { version = "1.0", default-features = false }
crunch = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
nanoserde = { version = "0.2.1", default-features = false, features = ["json"] }
# neon = { version = "1.1", features = ["napi-6"] }
# orx-parallel = "3.4.0"
# par-iter = "2.0"
rayon = "1.11"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
walkdir = "2.5"
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
