[package]
edition = "2024"
name = "texture_packer"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
crunch = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
nanoserde = { version = "0.2.1", default-features = false, features = ["json"] }
# orx-parallel = "3.4.0"
rayon = "1.11"
walkdir = "2.5"
napi = { version = "3.0.0", features = ["error_anyhow"] }
napi-derive = "3.0.0"
fast_image_resize = { version = "6.0.0", features = ["image", "only_u8x4"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
